<resources>
    <string name="app_name" translatable="false">Jar</string>
    <string name="default_notification_channel_id" translatable="false">CHANGE_JAR_FCM</string>
    <string name="clevertap_notification_channel_name" translatable="false">Change Jar Clevertap Channel</string>
    <string name="facebook_app_id" translatable="false">134931178603805</string>
    <string name="facebook_client_token" translatable="false">cef89d746dfc9f47ddef496368bc2d5b</string>
    <string name="home">Home</string>
    <string name="discover">Discover</string>
    <string name="wallet">Wallet</string>
    <string name="locker">Locker</string>
    <string name="transactions">Transactions</string>
    <string name="account">Account</string>
    <string name="invest_your_spare_change">Invest your spare change</string>
    <string name="in_24k_gold">in 24K Gold</string>
    <string name="please_enter_age">Please enter age</string>
    <string name="please_select_gender">Please select gender</string>
    <string name="login_signup">Create an account</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="perc_100_safe_and_secure">100% safe and secure</string>
    <string name="next">Next </string>
    <string name="or">OR</string>
    <string name="login_with_truecaller">Login With Truecaller</string>
    <string name="please_enter_a_valid_number">Please enter a valid number</string>
    <string name="please_enter_a_valid_otp">Please enter a valid OTP</string>
    <string name="please_enter_a_valid_name">Please enter a valid name</string>
    <string name="did_not_receive_otp_resend_n_sec">Didn\'t receive OTP? <u>Resend %ds</u></string>
    <string name="did_not_receive_otp_resend">Didn\'t receive OTP? <u>Resend</u></string>
    <string name="submit">Submit</string>
    <string name="we_just_sent_an_otp_to_x_number">We just sent an OTP\n to %s</string>
    <string name="i_don_t_have_a_promo_code">I don\'t have a promo code</string>
    <string name="enter_your_code_here">Enter your code here</string>
    <string name="do_you_have_a_promo_code">Do you have a promo code?</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="your_name_here">Your name here</string>
    <string name="continue_text">Continue</string>
    <string name="select_your_gender">Select your gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="age">Age</string>
    <string name="you_should_know_this_emoji">You should know this 👇🏻</string>
    <string name="your_spare_change_is_invested_in_pure_gold">Your spare change is invested in 24k, 99.5% pure gold</string>
    <string name="permissions_required">Permissions required</string>
    <string name="allow_now">Allow now</string>
    <string name="jar_needs_to_access_sms_permission">Jar needs access to SMS</string>
    <string name="we_need_permission_to_read_your_sms_and_enable_savings">Jar calculates your spare change by reading your transaction SMS\n\n*No personal SMS are read.</string>
    <string name="auto_invest_10_rupees_when_no_spends_are_detected">Auto invest ₹10 when no spends are detected</string>
    <string name="open_permission_settings">Open permission settings</string>
    <string name="app_under_maintenance">App is under maintenance</string>
    <string name="leaving_already">Leaving Already?</string>
    <string name="finish_signing_up_and_win_multiple_rewards">Finish signing up and win\nmultiple rewards</string>
    <string name="maybe_later"><u>Maybe later</u></string>
    <string name="signup_now">Sign up now</string>
    <string name="play_games">Play games</string>
    <string name="double_your_savings">Double your savings</string>
    <string name="spin_the_bottle">Spin the bottle</string>
    <string name="spin_the_bottle_and_2x_your_savings">Spin to double your most recent saving</string>
    <string name="autopay_failed">Autopay Failed</string>
    <string name="autopay_setup">Autopay Setup</string>
    <string name="processing">Processing…</string>
    <string name="setup_in_progress">Setup in progress</string>
    <string name="how_it_works">How it works</string>
    <string name="keep_investing">Keep investing</string>
    <string name="unlock_reward">Unlock reward</string>
    <string name="you_reached_a_milestone">You reached a milestone!</string>
    <string name="learn_more">Learn more</string>
    <string name="get_exciting_rewards">Get exciting rewards</string>
    <string name="you_own">You Own</string>
    <string name="_24_karat_gold_99_5_purity">24k | 99.5% Pure Gold</string>
    <string name="hello">Hello!</string>
    <string name="hello_comma">Hello,</string>
    <string name="updated_s">Updated %s</string>
    <string name="n_gm">%sgm</string>
    <string name="n_n_gm">%s\ngm</string>
    <string name="start_daily_investing_subheading">Grow your wealth with daily investments</string>
    <string name="daily_amount">Daily amount</string>
    <string name="set_amount">Set amount</string>
    <string name="active_investing">Actively investing \u20B9%s daily</string>
    <string name="invest_with_upi">Invest with UPI</string>
    <string name="don_t_want_to_invest_full_amount">Don\'t want to invest full amount?</string>
    <string name="tap_here"><u>Tap here</u></string>
    <string name="invest_now">Invest now</string>
    <string name="start_your_investment_journey">Start your investment journey</string>
    <string name="rupee_x_in_double">\u20B9%.2f</string>
    <string name="rupee_x_in_double_strike"><strike>\u20B9%.2f</strike></string>
    <string name="rupee_x_in_string">\u20B9%s</string>
    <string name="rupee_x_in_minus_double_strike">- <strike>\u20B9%.2f</strike></string>
    <string name="rupee_x_in_plus_double_strike">+ <strike>\u20B9%.2f</strike></string>
    <string name="gift_gold_to_someone_special">Gift gold to someone special</string>
    <string name="view_gifting_history">View Gifting History</string>
    <string name="send_a_gift">Send a Gift</string>
    <string name="buy_x">Buy \u20B9%.1f</string>
    <string name="sell_x">Sell \u20B9%.1f</string>
    <string name="delivery_x">Sell \u20B9%.1f</string>
    <string name="transaction_type_amount">%s ₹%.1f</string>
    <string name="view_referrals">View referrals</string>
    <string name="send_invite">Send invite</string>
    <string name="invite_a_friend_and_earn_on_jar">Invite a friend and earn on Jar</string>
    <string name="resume_now">Resume Now</string>
    <string name="setup">Setup</string>
    <string name="savings_paused">Savings Paused</string>
    <string name="setup_again_to_start_savings">Turn it back on to start automatic \ninvestments</string>
    <string name="autopay_disabled">Auto-invest is off</string>
    <plurals name="resuming_in_n">
        <item quantity="one">Resuming in %d day</item>
        <item quantity="other">Resuming in %d days</item>
    </plurals>
    <string name="game_will_be_unlocked">The game will be unlocked on your next transaction!</string>
    <string name="used_spins_x">You\'ve used %d daily spins</string>
    <string name="leak_canary_test_class_name" translatable="false">assertk.Assert</string>
    <string name="permission_needed">Permission needed</string>
    <string name="permission_needed_desc">We need permission to proceed further on the app</string>
    <string name="quick_guides">Quick guides</string>
    <string name="try_withdraw_money">Try “Setup Auto-Invest”</string>
    <string name="have_some_other_query_or_issue_talk_to_us_on_whatsapp">Have some other query or issue\nTalk to us on WhatsApp</string>
    <string name="chat_now">Chat now</string>
    <string name="loading">Loading…</string>
    <string name="updated">Updated %s</string>
    <string name="min_gold_req_for_delivery_is_n_gm">Minimum gold required for gold delivery is %sgm</string>
    <string name="enter_pincode_to_check_availability">Enter Pincode to check availability</string>
    <string name="available_options">Available Options</string>
    <string name="product_details">Product Details</string>
    <string name="cart">Cart</string>
    <string name="based_on_latest_gold_price">Based on latest gold price</string>
    <string name="material">Material</string>
    <string name="gold_purity">Gold Purity</string>
    <string name="weight">Weight</string>
    <string name="quality">Quality</string>
    <string name="delivery_details">Delivery Details</string>
    <string name="get_delivery">Get Delivery</string>
    <string name="payment_summary">Payment Summary</string>
    <string name="gold_price">Gold price</string>
    <string name="making_and_delivery_charges">Making &amp; Delivery charges</string>
    <string name="your_jar_savings_used">Your Jar savings used</string>
    <string name="to_pay">To pay</string>
    <string name="add_delivery_details">Add Delivery details</string>
    <string name="add_new_address">Add new Address</string>
    <string name="save_new_address">Save new Address</string>
    <string name="update_address">Update Address</string>
    <string name="save_and_proceed">Save And Proceed</string>
    <string name="edit_address">Edit Address</string>
    <string name="select_an_address_for_delivery">Select an address for delivery</string>
    <string name="delivery_in_n">Delivery in %s</string>
    <string name="order_tracking_and_support">Order tracking and support</string>
    <string name="secure_packaging">Secure packaging</string>
    <string name="no_return_allowed_after_order_is_placed">No returns allowed after order is placed</string>
    <string name="order_summary">Order summary</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="pay_now">Pay Now</string>
    <string name="this_area_is_not_servicable_currently">This area is not serviceable currently</string>
    <string name="check">Check</string>
    <string name="please_enter_a_valid_pincode">Please enter a valid pincode</string>
    <string name="please_enter_a_valid_email">Please enter a valid email</string>
    <string name="free">Free</string>
    <string name="tracking_id">Tracking ID</string>
    <string name="tracking_id_will_be_generated_after_gold_shipped">Tracking link will be generated after the gold is shipped.</string>
    <string name="great_decision">Great Decision!</string>
    <string name="creating_your_order_x">Creating your order for: ₹%s</string>
    <string name="you_own_n_gm">You Own : %sgm</string>
    <string name="oops">Oops!</string>
    <string name="our_delivery_partners_do_not_deliver_here_yet">Our delivery partners do not deliver here yet.</string>
    <string name="order_placed">Order Placed</string>
    <string name="street_address_two">Street address 2 (Optional)</string>
    <string name="perc_99_99_pure_gold" translatable="false">24k | 99.99% Pure Gold</string>
    <string name="perc_99_pure_gold" translatable="false">24k | 99.5% Pure Gold</string>
    <string name="done">Done</string>
    <string name="gm">gm</string>
    <string name="_0">0</string>
    <string name="you_pay">You pay</string>
    <string name="rs_0">₹0.0</string>
    <string name="_0_5gm">0.5gm</string>
    <string name="_1gm">1gm</string>
    <string name="_2gm">2gm</string>
    <string name="_5gm">5gm</string>
    <string name="most_gifted">Most gifted</string>
    <string name="add_a_special_message">Add a special message</string>
    <string name="_0_140">0/140</string>
    <string name="start_typing">Start typing…</string>
    <string name="x_y_steps_to_complete">%1$d/%2$d steps to complete</string>
    <string name="about_you">Tell us about you</string>
    <string name="please_select_profile_pic">Please select your profile picture.</string>
    <string name="can_be_changed_anytime">Can be changed anytime in the settings.</string>
</resources>