<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/newHomeFragment"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:orderInCategory="1"
        android:title="@string/home"
        app:showAsAction="always" />

    <item
        android:id="@+id/transactionFragment"
        android:enabled="true"
        android:icon="@drawable/ic_transaction"
        android:orderInCategory="2"
        android:title="@string/transactions"
        app:showAsAction="always" />

    <item
        android:id="@+id/accountFragment"
        android:enabled="true"
        android:icon="@drawable/ic_account"
        android:orderInCategory="3"
        android:title="@string/account"
        app:showAsAction="always" />

</menu>