<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/purple400"
    android:clipChildren="false"
    android:clipToPadding="false">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTitle"
        style="@style/BigTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="@dimen/dimen_8dp"
        android:gravity="start"
        android:text="@string/add_a_special_message"
        android:textColor="@color/commonTxtColor"
        android:textSize="@dimen/dimen_16sp"
        app:layout_constraintEnd_toStartOf="@+id/ivClose"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="@dimen/dimen_8dp"
        android:src="@drawable/ic_close"
        android:tint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etMessage"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@drawable/rounded_bg_color_12dp"
        android:gravity="start"
        android:hint="@string/start_typing"
        android:imeOptions="actionDone"
        android:inputType="textMultiLine"
        android:maxLength="140"
        android:padding="@dimen/dimen_16dp"
        android:textColor="@color/commonTxtColor"
        android:textColorHint="@color/smallTxtColor"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/txtTitle">

        <requestFocus />
    </EditText>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtCounter"
        style="@style/SmallTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_20dp"
        android:text="@string/_0_140"
        app:layout_constraintBottom_toBottomOf="@+id/done"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/done" />

    <com.jar.app.core_ui.widget.button.CustomButtonV2
        android:id="@+id/done"
        android:layout_width="108dp"
        android:layout_height="44dp"
        android:layout_margin="@dimen/dimen_16dp"
        app:buttonText="@string/done"
        app:textMarginStart="36dp"
        app:textMarginEnd="36dp"
        app:buttonTextAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etMessage" />


</androidx.constraintlayout.widget.ConstraintLayout>