<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor"
    android:clipChildren="false"
    android:clipToPadding="false"
    android:paddingHorizontal="16dp"
    android:paddingVertical="24dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/actionBarItemBackground"
        app:layout_constraintBottom_toBottomOf="@id/headingTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/headingTv"
        app:srcCompat="@drawable/ic_arrow_back" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/headingTv"
        style="@style/BigTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="start|center_vertical"
        android:text="@string/about_you"
        android:textSize="14sp"
        app:layout_constraintEnd_toStartOf="@id/stepsTv"
        app:layout_constraintStart_toEndOf="@id/btnBack"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/stepsTv"
        style="@style/SmallTextViewStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:text="@string/x_y_steps_to_complete"
        android:textColor="@color/color_776e94"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@id/headingTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/headingTv"
        tools:ignore="SmallSp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvEtTitle"
        style="@style/BigTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/please_select_profile_pic"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headingTv" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvChangePic"
        style="@style/SmallTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/can_be_changed_anytime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEtTitle" />

    <!-- Clip items of recyclerview, so they don't appear outside layout-->
    <FrameLayout
        android:id="@+id/flProfileImage"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginVertical="48dp"
        android:clipChildren="true"
        android:clipToPadding="true"
        app:layout_constraintBottom_toTopOf="@id/btnNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvChangePic">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvProfilePic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:fadingEdgeLength="100dp"
            android:orientation="horizontal"
            android:requiresFadingEdge="horizontal"
            tools:itemCount="5"
            tools:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/cell_profile_item" />
    </FrameLayout>

    <com.jar.app.core_ui.widget.button.CustomButtonV2
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="56dp"
        app:buttonText="@string/next"
        app:buttonTextAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/flProfileImage" />

</androidx.constraintlayout.widget.ConstraintLayout>