<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvHeaderPromoCode"
            style="@style/BigTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_you_have_a_promo_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPromoCode"
            style="@style/EditTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:focusable="true"
            android:hint="@string/enter_your_code_here"
            android:imeOptions="actionDone"
            android:inputType="textCapCharacters"
            android:lines="1"
            android:maxLength="100"
            android:maxLines="1"
            app:layout_constraintTop_toBottomOf="@id/tvHeaderPromoCode">

            <requestFocus />
        </com.google.android.material.textfield.TextInputEditText>

        <com.jar.app.core_ui.widget.button.CustomButtonV2
            android:id="@+id/btnSubmitPromo"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginHorizontal="6dp"
            android:layout_marginTop="32dp"
            android:paddingHorizontal="84dp"
            android:paddingVertical="18dp"
            app:textMarginTop="@dimen/dimen_18dp"
            app:textMarginBottom="@dimen/dimen_18dp"
            app:buttonText="@string/next"
            app:buttonTextAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etPromoCode" />

        <com.jar.app.core_ui.widget.button.CustomButtonV2
            android:id="@+id/btnNoPromo"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginHorizontal="6dp"
            android:layout_marginVertical="32dp"
            android:padding="18dp"
            app:buttonText="@string/i_don_t_have_a_promo_code"
            app:buttonType="secondaryHollowButton"
            app:textMarginTop="@dimen/dimen_18dp"
            app:textMarginBottom="@dimen/dimen_18dp"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSubmitPromo" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>